v1.4 Cambio del codigo
se cambio el JDK por uno mas nuevo y cambios en algunos errres